<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text"
        android:id="@+id/edit_text"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:id="@+id/radio1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:id="@+id/radio2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:id="@+id/radio3"/>/>
    </RadioGroup>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:id="@+id/btn_add"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        android:id="@+id/btn_clear"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_message"
        android:id="@+id/status_message"/>
</LinearLayout>